--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,12 @@ body{
 .textarea{
     width: 16rem;
     height: 12rem;
+    resize: none;
 }
 
+.textarea-input{
+    border: 2px solid var(--primary-color);
+}
 
 
 /* Button */
@@ -69,8 +73,14 @@ body{
 .btn-translate{
     position: relative;
     bottom: 6rem;
-    background-color: var(--section-color);
+    /* background-color: var(--section-color); */
     border: 2.3px solid var(--primary-color);
-    border-radius: 1rem 1rem;
+    border-radius: 1rem;
+    padding: 0.7rem 0.5rem;
+    margin: 0rem 0.5rem;
+}
 
+.btn-translate span{
+    color: var(--section-color);
+    font-weight: bold;
 }
