--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 :root{ 
     --section-color: #374151;
     --primary-color: #eab308;
     --secondary-color: #0891b2;
+    --aboutsection-color: #d1d5db;
+    --textarea-font: 'Open Sans', sans-serif;
 }
 
 body{
@@ -61,10 +65,21 @@ body{
     width: 16rem;
     height: 12rem;
     resize: none;
+    border: 2px solid var(--section-color);
+    font-family: var(--textarea-font);
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: bold;
 }
 
 .textarea-input{
-    border: 2px solid var(--primary-color);
+    border-radius: 2rem 1rem 1rem 2rem;
+    padding: 1rem 1rem 1.4rem 1.4rem;
+}
+
+.textarea-output{
+    border-radius: 1rem 2rem 2rem 1rem;
+    padding: 1rem 1rem 1.4rem 1.4rem;
 }
 
 
@@ -74,13 +89,39 @@ body{
     position: relative;
     bottom: 6rem;
     /* background-color: var(--section-color); */
-    border: 2.3px solid var(--primary-color);
-    border-radius: 1rem;
-    padding: 0.7rem 0.5rem;
+    border: 2.3px solid var(--section-color);
+    border-radius: 0.3rem;
+    padding: 0.4rem 0.5rem;
     margin: 0rem 0.5rem;
+    background-color: var(--section-color);
 }
 
 .btn-translate span{
-    color: var(--section-color);
+    font-family: var(--textarea-font);
+    color: var(--primary-color);
     font-weight: bold;
+}
+
+.btn-image{
+    text-align: center;
+}
+
+.btn-image img{
+    max-width: 80px;
+    position: relative;
+    top: 11.6rem;
+}
+
+.section-about{
+    max-width: 600px;
+    margin: auto;
+    text-align: center;
+    background-color: var(--aboutsection-color);
+    padding: 0.7rem 1rem;
+}
+
+.section-about h2{
+    font-weight: normal;
+    font-family: var(--textarea-font);
+    font-size: 0.8rem;
 }
