--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 body{
     font-family: 'Dongle', sans-serif;
+    margin: 0rem;
 }
 
 /* Top Section */
@@ -21,6 +22,8 @@ body{
 .section-header{
     background-color: var(--section-color);
     text-align: center;
+    position: relative;
+    bottom: 1rem;
 }
 
 .section-header ul{
@@ -53,7 +56,7 @@ body{
 /* Text area(combined) */
 .portion-textarea{
     position: relative;
-    bottom: 5rem;
+    bottom: 6rem;
 }
 
 
@@ -129,7 +132,7 @@ body{
     padding: 0.7rem 1rem 1.5rem 1rem;
     border-radius: 0.35rem 0.35rem;
     position: relative;
-    bottom: 2rem;
+    bottom: 4rem;
 }
 
 .section-about h2{
