--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ body{
     padding: 0.4rem 0.5rem;
     margin: 0rem 0.5rem;
     background-color: var(--section-color);
+    cursor: pointer;
 }
 
 .btn-translate span{
